crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__jwk_snapshots__ed25519_kid_format.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: info
---
len: 16
is_base64url_chars: true
