crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__jwk_snapshots__ed25519_public_jwk.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: shape
---
kty: OKP
crv: Ed25519
alg: EdDSA
use_: sig
kid: "[REDACTED]"
x: "[REDACTED]"
