crates/uselesskey-ed25519/tests/snapshots/snapshots_ed25519__jwk_snapshots__snapshot_ed25519_private_jwk_structure.snap
---
source: crates/uselesskey-ed25519/tests/snapshots_ed25519.rs
expression: redacted
---
alg: EdDSA
crv: Ed25519
d: "[REDACTED]"
kid: "[REDACTED]"
kty: OKP
use: sig
x: "[REDACTED]"
